--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    //location service
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 }
