update: add post activity -Repository -ViewModel -api call -generic api response and repository response
by: Forhadul

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
 
     //location service
     implementation 'com.google.android.gms:play-services-location:19.0.1'
+
+    //image selector
+    implementation 'com.zhihu.android:matisse:0.5.2'
 }
