--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,13 @@
             android:exported="false" />
         <activity
             android:name=".ui.registration.RegistrationActivity"
-            android:exported="false" />
+            android:exported="true" >
+          <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
