--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.single_category.SingleCategoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.book_details.BookDetailsActivity"
             android:exported="false" />
         <activity
@@ -52,7 +55,7 @@
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true" />
